MBO/client/assets/css/site.css
body {}

.container {
  padding: 15px;
}

.min-height {
  min-height: 480px;
}

.flex-vertical {
  display: flex;
  align-items: center;
  justify-content: center;
}

.full-width {
  width: 100%;
}

.right-align {
  text-align: right;
}

.pull-right {
  float: right;
}


/*Footer*/

.footer {
  padding: 50px;
  background-color: #424242;
  z-index: 100;
}


/*Vue material customize*/


/*Seelct list*/

.md-menu-content.md-direction-bottom-right.md-active {
  width: 100%;
}

.md-card-header.indigo {
  background-color: #3f51b5;
  color: rgba(255, 255, 255, .87);
  margin-bottom: 40px;
}


/*vue-datepicker*/

.cov-vue-date {
  width: 100%;
}

.custom-label {
  color: rgba(0, 0, 0, .54);
  font-size: 12px;
  line-height: 20px;
}


/*Animation keyframes*/

.animate-warn {
  animation-delay: 2s;
  -webkit-animation-name: jump;
  animation-name: jump;
  -webkit-animation-duration: 8s;
  animation-duration: 8s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  transform-origin: 50%;
}

.animate-danger {
  animation-delay: 1s;
  -webkit-animation-name: shake;
  animation-name: shake;
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  transform-origin: 50% 0;
}

.animate-active {
  animation-delay: 0s;
  -webkit-animation-name: active;
  animation-name: active;
  -webkit-animation-duration: 0.25s;
  animation-duration: .25s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  animation-iteration-count: 1;
  transform-origin: 50% 0;
}

@keyframes active {
  0%,
  100% {
    -webkit-transform: rotate(0deg) scale(1);
    transform: rotate(0deg) scale(1);
  }
  50% {
    -webkit-transform: rotate(0deg) scale(1.25);
    transform: rotate(0deg) scale(1.25);
  }
}

@keyframes jump {
  0%,
  50%,
  100% {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
  }
  10%,
  20%,
  30%,
  40% {
    -webkit-transform: translateY(-3px);
    transform: translateY(-3px);
  }
  15%,
  25%,
  35%,
  45% {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
  }
}

@keyframes shake {
  0%,
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
  /*Fast Shake*/
  1%,
  3%,
  5%,
  7%,
  9% {
    -webkit-transform: translateX(-2px);
    transform: translateX(-2px);
  }
  2%,
  4%,
  6%,
  8%,
  10% {
    -webkit-transform: translateX(2px);
    transform: translateX(2px);
  }
  /*Medium Shake*/
  12%,
  16%,
  20%,
  24% {
    -webkit-transform: translateX(-1px);
    transform: translateX(-1px);
  }
  14%,
  18%,
  22%,
  26% {
    -webkit-transform: translateX(1px);
    transform: translateX(1px);
  }
  /*Slow Shake*/
  30%,
  38%,
  46% {
    -webkit-transform: translateX(-0.5px);
    transform: translateX(-0.5px);
  }
  34%,
  42%,
  50% {
    -webkit-transform: translateX(0.5px);
    transform: translateX(0.5px);
  }
}


/*Route change animations*/

.slide-up-enter-active {
  transition: all .25s ease-out;
}

.slide-up-leave-active {
  transition: all .1s ease;
}

.slide-up-enter {
  transform: translateY(-50px);
  opacity: 0;
}

.slide-up-leave {
  transform: translateY(-20px);
  opacity: 0;
}


/*Test right*/

.slide-right-enter-active {
  transition: all .25s ease-out;
}

.slide-right-leave-active {
  transition: all .1s ease;
}

.slide-right-enter {
  transform: translateX(-50px);
  opacity: 0;
}

.slide-right-leave-active {
  transform: translateX(20px);
  opacity: 0;
}


/*Test left*/

.slide-left-enter-active {
  transition: all .25s ease-out;
}

.slide-left-leave-active {
  transition: all .1s ease;
}

.slide-left-enter {
  transform: translateX(50px);
  opacity: 0;
}

.slide-left-leave-active {
  transform: translateX(-20px);
  opacity: 0;
}

